# GatewayChanger

./: CMakeLists.txt  config.json
src/: GatewayHelper.cpp  GatewayHelper.hpp  main.cpp  test.cpp
